a1/brendan_gordon/TEST_PROGRAMS/invalidtype/frederic_lafrance/4.min
# Undeclared variable, both sides of an assignment
var y: int;
y = x;
z = y;

